# rusagent

./: .gitignore  Cargo.toml  MANUS_ANALYSIS.md  README_MULTI_AGENT.md  智能体架构对比分析.md
example/: flow.rs  test_flow.rs  test_mock.rs  test_simple.rs  tools.rs
examples/: agent_interaction.rs  multi_agent_collaboration.rs  multi_agent_demo.rs  simple_multi_agent.rs
src/: error.rs  lib.rs
src/agent/: agent.rs  executor.rs  mod.rs  planner.rs  task.rs  types.rs  verifier.rs
src/agent/agents/: executor_agent.rs  master_agent.rs  mod.rs  monitor_agent.rs  planner_agent.rs  verifier_agent.rs
src/agent/context/: mod.rs
src/agent/core/: agent.rs  base_agent.rs  mod.rs
src/agent/execution/: executor.rs
src/agent/memory/: mod.rs
src/agent/momory/: mod.rs
src/agent/multi/communication/: message_bus.rs
src/agent/multi/manager/: agent_manager.rs
src/agent/multi/registry/: agent_registry.rs
src/agent/plan/: mod.rs
src/agent/planning/: planner.rs  step.rs
src/agent/shared/: global_context.rs  memory_pool.rs
src/agent/state/: mod.rs
src/agent/verification/: verifier.rs
src/agents/: executor_agent.rs  master_agent.rs  monitor_agent.rs  planner_agent.rs  verifier_agent.rs
src/error/: agent_error.rs  mod.rs
src/input/: mod.rs  model.rs  parser.rs
src/mcp/: instantiate.rs
src/message/: llm.rs  mod.rs  planner.rs
src/models/: plan.rs
src/multi_agent/: mod.rs
src/multi_agent/communication/: message.rs  message_bus.rs  mod.rs
src/multi_agent/coordination/: mod.rs  task_queue.rs
src/multi_agent/manager/: agent_manager.rs  mod.rs
src/multi_agent/registry/: agent_registry.rs  mod.rs
src/prompt/: builder.rs  mod.rs
src/shared/: global_context.rs  memory_pool.rs  mod.rs
src/tools/: instantiate.rs  mod.rs  model.rs
src/utils/: string_util.rs
tests/: multi_agent_test.rs
