[package]
name = "rusagent"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
model-gateway-rs = { path = "/Users/ancient/src/rust/model-gateway-rs" }
mcp-client = { package = "mcp-client-rust", path = "../mcp-rs/crates/mcp-client-rust" }

[[example]]
name = "flow"
path = "example/flow.rs"

[[example]]
name = "tools"
path = "example/tools.rs"
