[package]
name = "rusagent"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1.17", features = ["v4"] }
once_cell = "1.19"
model-gateway-rs = { version = "0.1.6" }
mcp-client = { package = "mcp-client-rust", path = "../mcp-rs/crates/mcp-client-rust" }

[[example]]
name = "flow"
path = "example/flow.rs"

[[example]]
name = "tools"
path = "example/tools.rs"

[[example]]
name = "test_flow"
path = "example/test_flow.rs"

[[example]]
name = "test_simple"
path = "example/test_simple.rs"

[[example]]
name = "test_mock"
path = "example/test_mock.rs"
