[package]
name = "rusagent"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1.17", features = ["v4", "serde"] }
once_cell = "1.19"
model-gateway-rs = { version = "0.1.6" }
mcp-client = { package = "mcp-client-rust", path = "../mcp-rs/crates/mcp-client-rust" }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"

[[example]]
name = "multi_agent_demo"
path = "examples/multi_agent_demo.rs"

[[example]]
name = "multi_agent_collaboration"
path = "examples/multi_agent_collaboration.rs"

[[example]]
name = "simple_multi_agent"
path = "examples/simple_multi_agent.rs"

[[example]]
name = "agent_interaction"
path = "examples/agent_interaction.rs"
